Added Proper Image Handling